--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
   },
   "dependencies": {
     "gatsby": "2.9.4",
+    "gatsby-image": "^2.2.6",
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-force-trailing-slashes": "1.0.4",
     "gatsby-plugin-postcss": "^2.1.0",
     "gatsby-plugin-react-helmet": "3.0.12",
+    "gatsby-plugin-sharp": "^2.2.8",
+    "gatsby-source-filesystem": "^2.1.5",
+    "gatsby-transformer-sharp": "^2.2.4",
     "postcss": "^7.0.16",
     "postcss-extend": "^1.0.5",
     "postcss-import": "^12.0.1",
@@ -45,6 +49,6 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "5.2.1",
-    "tailwindcss": "^1.0.3"
+    "tailwindcss": "^1.0.5"
   }
 }
