--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-react": "7.13.0"
   },
   "dependencies": {
-    "gatsby": "2.9.4",
+    "gatsby": "~2.12.0",
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-force-trailing-slashes": "1.0.4",
